# cpdb-rs

./: ARCHITECTURE_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_REPORT.md  LICENSE  PRODUCTION_READINESS.md  README.md  build.rs  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs  cli_printer_manager.rs  cpdb-text-frontend.rs  test_print_job.rs  zbus_test.rs
include/: wrapper.h
src/: backend.rs  callbacks.rs  client.rs  common.rs  config.rs  error.rs  events.rs  ffi.rs  frontend.rs  job.rs  lib.rs  media.rs  options.rs  printer.rs  proxy.rs  settings.rs  util.rs
src/ffi/: callbacks.rs  common.rs  frontend.rs  mod.rs  printer.rs
tests/: integration.rs  unit_tests.rs
