[package]
name = "cpdb-rs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for OpenPrinting cpdb-libs — Common Print Dialog Backends"
license = "MIT"
keywords = ["printing", "cups", "openprinting", "ffi", "cpdb"]
categories = ["api-bindings", "os::unix-apis"]
readme = "README.md"
rust-version = "1.85"
build = "build.rs"

[dependencies]
libc = "0.2"
thiserror = "2.0"
log = "0.4"
crossbeam-channel = "0.5"
glib-sys = "0.22"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[features]
frontend = []
backend = []

[dev-dependencies]
tempfile = "3.10"
