[package]
name = "cpdb-rs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for OpenPrinting cpdb-libs — Common Print Dialog Backends"
license = "MIT"
keywords = ["printing", "cups", "openprinting", "ffi", "cpdb"]
categories = ["api-bindings", "os::unix-apis"]
readme = "README.md"
repository = "https://github.com/OpenPrinting/cpdb-rs"
rust-version = "1.85"
build = "build.rs"
links = "cpdb"

[package.metadata.docs.rs]
all-features = false
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
thiserror = "2.0"
log = "0.4"
glib-sys = "0.22"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.27"
